product/manifests/application/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commence-product
  labels:
    app: e-commence-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commence-product
  template:
    metadata:
      name: e-commence-product
      labels:
        app: e-commence-product
    spec:
      containers:
        - name: e-commence-product
          image: example
          imagePullPolicy: Always
          ports:
            - containerPort: 30013
              protocol: TCP
              name: http-server
            - containerPort: 30014
              protocol: TCP
              name: grpc-server
          #livenessProbe:
          #  httpGet:
          #    path: /healthz
          #    port: 8080
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          #  successThreshold: 1
          #readinessProbe:
          #  httpGet:
          #    path: /readyz
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 5
          #  timeoutSeconds: 3
          #  failureThreshold: 3
          #  successThreshold: 1
      restartPolicy: Always
