product/manifests/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-commence-product-service
spec:
  selector:
    app: e-commence-product
  ports:
    - name: http
      port: 30001
      protocol: TCP
      targetPort: 30001
      nodePort: 30001
    - name: grpc
      port: 30002
      protocol: TCP
      targetPort: 30002
      nodePort: 30002
  type: NodePort
